...
                .subScreenTabBarHidden()
        } label: {
            HStack {
                Image(systemName: "magnifyingglass")
                    .font(.system(size: 18, weight: .medium))

                Text("라운드 검색하기")
                    .font(.parkHeadlineSmall)

                Spacer()

                Image(systemName: "arrow.right")
            }
...

        let days = Calendar.current.dateComponents([.day], from: Date(), to: bookingDate).day ?? 0

        if days == 0 {
            return "오늘"
        } else if days == 1 {
            return "내일"
        } else if days < 0 {
            return ""
        } else {
            return "D-\(days)"
        }
    }
...
